# Python-Project

./: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py
src/python_project/: python_project.py
tests/: test_pybacktestchain.py
